--- a/.github/workflows/build-example-kyria-nice_nano_v2.yml
+++ b/.github/workflows/build-example-kyria-nice_nano_v2.yml
@@ -9,4 +9,4 @@ jobs:
     secrets: inherit
     with:
       board: '["nice_nano_v2"]'
-      shield: '["kyria_left","kyria_right"]'
+      shield: '["kyria_rev2_left","kyria_rev2_right"]'
